# FloppyFish

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .ninja_deps  .ninja_log  CMakeLists.txt  README.md  assets.qrc  build.ninja  shader.qrc  shaders.qrc
glbase/: CMakeLists.txt  geometries.cpp  geometries.hpp  geomload.cpp  geomload.hpp  gltool.cpp  navigator.cpp  texload.cpp
lib/tinyobj/: tiny_obj_loader.h
res/: BillDerLachs.mtl  Lamp.mtl  Sign.mtl
src/: main.cpp
src/assets/: BillDerLachs.mtl  Lamp.mtl
src/config/: config.cpp  config.h
src/drawables/: background.cpp  background.h  collisionchecker.cpp  collisionchecker.h  drawable.cpp  drawable.h  fish.cpp  fish.h  fishController.cpp  fishController.h  floppyMesh.cpp  floppyMesh.h  gameover.cpp  gameover.h  obstacle.cpp  obstacle.h  postProcessing.cpp  postProcessing.h  skybox.cpp  skybox.h
src/drawables/obstacles/: collisionchecker.cpp  collisionchecker.h  obstacle.cpp  obstacle.h  part.cpp  part.h
src/drawables/scene/: background.cpp  background.h  ocean.cpp  ocean.h  skybox.cpp  skybox.h
src/gui/: mainwindow.cpp  mainwindow.h
src/objects/: background.cpp  background.h  floppyMesh.cpp  floppyMesh.h  skybox.cpp  skybox.h  triangle.cpp  triangle.h
src/shaders/: background.fs.glsl  background.vs.glsl  common.vs.glsl  cookTorrance.fs.glsl  cookTorrance.vs.glsl  fish.fs.glsl  fish.vs.glsl  gameover.fs.glsl  gameover.vs.glsl  hitbox.fs.glsl  hitbox.vs.glsl  obstacle.fs.glsl  ocean.fs.glsl  ocean.vs.glsl  postProcessing.fs.glsl  postProcessing.vs.glsl  skybox.fs.glsl  skybox.vs.glsl  triangle.fs.glsl
src/utils/: image.cpp  image.h  imageTexture.cpp  imageTexture.h  soundEffectPlayer.cpp  soundEffectPlayer.h  utils.cpp  utils.h
